--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.14",
     "next": "14.2.2",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
